# Githipedia

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  SECURITY.md
PROGRAMS/GRS/: LICENSE  README.md  TERMS.md
PROGRAMS/GRS/git-rescope/: Cargo.toml
PROGRAMS/GRS/git-rescope/src/: main.rs
PROGRAMS/GRS/git-rescope/src/commands/: delete.rs  list.rs  mod.rs  restore.rs  save.rs
PROGRAMS/GRS/git-rescope/src/engine/: editor.rs  git.rs  mod.rs
PROGRAMS/GRS/git-rescope/src/security/: audit.rs  guard.rs  keys.rs  mod.rs
PROGRAMS/GRS/git-rescope/src/storage/: config.rs  mod.rs  schema.rs  store.rs
PROGRAMS/GRS/git-rescope/src/tui/: dashboard.rs  mod.rs
PROGRAMS/Github Dashboard/: Github DashBoard.py  README.md
PROGRAMS/LYU/: README.md  pyproject.toml
PROGRAMS/LYU/src/license_year_updater/: cli.py  core.py
REPOS/REPO 1 - Achievements_and_Badges/: README.md
REPOS/REPO 10 - SSM/: README.md
REPOS/REPO 11 - HRMF/: LICENSE  README.md
REPOS/REPO 12 - AICD/: LICENSE  README.md
REPOS/REPO 13 - CDc/: README.md
REPOS/REPO 14 - Secrets management/: README.md
REPOS/REPO 15 - Hidden Markdown/: README.md
REPOS/REPO 2 - Profile/: README.md
REPOS/REPO 3 - Advisory Database/: README.md
REPOS/REPO 4 - Education/: README.md
REPOS/REPO 5 - Action/: README.md
REPOS/REPO 6 - Page/: README.md
REPOS/REPO 7 - CLI/: LICENSE  README.md
REPOS/REPO 8 - EOSM/: README.md
REPOS/REPO 9 - History/: README.md
REPOS1/: README.md
REPOS1/REPO 1 - Creating an Organization/: README.md
REPOS1/REPO 2 - Maintaining and Managing/: LICENSE  README.md
REPOS1/REPO 3 - Building Your Info Hub/: README.md
