[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "license-year-updater"
version = "0.1.0"
description = "CLI tool to update copyright years in LICENSE files."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
keywords = ["license", "copyright", "cli", "maintainer-tools"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/yourname/license-year-updater"

[project.scripts]
update-license-year = "license_year_updater.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
